--- a/P2/app/src/main/res/layout/item_view_note.xml
+++ b/P2/app/src/main/res/layout/item_view_note.xml
@@ -8,7 +8,7 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     android:id="@+id/item_card"
-    card_view:cardBackgroundColor="#FFFF"
+    card_view:cardBackgroundColor="#DEE4F3"
     card_view:cardCornerRadius="8dp"
     card_view:contentPadding="5dp"
     android:foreground="?selectableItemBackground"
@@ -41,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="11:29 PM"
-                android:textColor="@color/black"
+                android:textColor="#403F3F"
                 android:textSize="15sp" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
